# Yukon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cards.txt
assets/textures/: README.md
include/: card.h  card_deck.h  command_parser.h  game_controller.h  game_manager.h  game_utils.h  game_view.h  play_scene.h  scene_manager.h  startup_scene.h  ui_button.h
src/: card.c  card_deck.c  command_parser.c  game_controller.c  game_manager.c  game_utils.c  game_view.c  main.c  play_scene.c  play_scene.h  scene_manager.c  scene_manager.h  startup_scene.c  startup_scene.h  texture_manager.c  texture_manager.h  ui_button.c  ui_card.c
src/controller/: game_controller.c  game_controller.h
src/core/: yukon_core.c
src/core/include/: data_structures.h  yukon_core.h
src/core/model/: card.c  card.h  deck.c  deck.h  game.c  game.h
src/core/service/: game_service.c  game_service.h
src/core/utils/: error_handler.c  event_system.h  game_utils.c  game_utils.h  linked_list.c  linked_list.h  service_locator.c  service_locator.h
src/gui/: main.c
src/gui/controller/: game_controller.c  game_controller.h
src/gui/scene/: play_scene.c  play_scene.h  scene_manager.c  scene_manager.h  startup_scene.c  startup_scene.h
src/gui/service/: core_service.c  core_service.h
src/gui/utils/: event_system.c  event_system.h  gui_service_locator.c  gui_service_locator.h  gui_utils.c
src/gui/view/: gui_utils.c  gui_utils.h  texture_manager.c  texture_manager.h  ui_button.c  ui_button.h  ui_card.c  ui_card.h  ui_component.c  ui_component.h  ui_manager.h  window_manager.c  window_manager.h
src/model/: card.h  deck.c  deck.h  game.c  game.h  ui_button.c  ui_card.c  ui_card.h
src/scene/: play_scene.c  play_scene.h  scene_manager.c  scene_manager.h  startup_scene.c
src/service/: game_service.c  game_service.h
src/utils/: error_handler.h  event_system.h  game_utils.c  game_utils.h  linked_list.h  service_locator.c  service_locator.h
src/view/: texture_manager.c  texture_manager.h  ui_button.c  ui_button.h  ui_card.c  ui_card.h  ui_component.c  ui_component.h  ui_manager.c  ui_manager.h  window.h
tests/: test_main.c
